Add blog icon & link in menu

--- a/app/Resources/views/base.regular.html.twig
+++ b/app/Resources/views/base.regular.html.twig
@@ -51,6 +51,7 @@
                             <a href="http://instagram.com/kalaxiagame/" class="icon"> <img src="https://straypet.net/wp-content/uploads/2014/11/instagram-icon-good.png" id="instagram-icon" /> </a>
                             <a href="http://twitter.com/kalaxiagame " class="icon"> <img src="https://daks2k3a4ib2z.cloudfront.net/56c2fa79e7d136a016bbbb88/56c30bffe7d136a016bbdab3_twitter-icon.png" width="32" height="32" /> </a>
                             <a href="https://www.linkedin.com/company/11369270/ " class="icon"> <img src="http://v.fastcdn.co/u/1570556-0-LinkedInwhite.png" width="32" height="32" /> </a>
+                            <a href="https://kalaxia.org" class="icon"> <img src="https://kalaxia.org/wp-content/uploads/2017/11/cropped-Logo1_G60_512px-1.png" width="26" height="26" /> </a>
                         </div>
 					</div>
 				</nav>
