--- a/app/Resources/views/vote/details.html.twig
+++ b/app/Resources/views/vote/details.html.twig
@@ -5,11 +5,11 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('css/poll.css') }}" />
 {% endblock %}
 
-{% block page_title %}{{ (poll.type != 'feature') ? poll.title : poll.feedback.title }}{% endblock %}
+{% block page_title %}{{ poll.getTitle() }}{% endblock %}
 
 {% block body %}
     <div id="poll-description">
-        {{ (poll.type != 'feature') ? poll.content : poll.feedback.description }}
+        {{ poll.getContent() }}
     </div>
     {% if has_voted == false %}
         <div id="poll-options">
