--- a/app/Resources/views/vote/details.html.twig
+++ b/app/Resources/views/vote/details.html.twig
@@ -8,19 +8,45 @@
 {% block page_title %}{{ poll.getTitle() }}{% endblock %}
 
 {% block body %}
-    <div id="poll-description">
-        {{ poll.getContent() }}
-    </div>
-    {% if has_voted == false %}
-        <div id="poll-options">
-            {% for option in options %}
-                <a href="{{ path('vote_poll', {'id': poll.id, 'option_id': option.id }) }}" class="button warning">
-                    {{ option.value | trans }}
-                </a>
-            {% endfor %}
+    <div id="poll-container">
+        <div id="other-polls">
+            <div class="polls-list">
+                <h3>{{ 'polls.other_polls' | trans }}</h3>
+                {% for other_poll in other_polls if other_poll.id != poll.id %}
+                    <div class="poll">
+                        <div class="info">
+                            <strong>
+                                {{ other_poll.getTitle() }}
+                            </strong>
+                            <em>
+                                {{ other_poll.endedAt | date('full_date' | trans) }}
+                            </em>
+                        </div>
+                        <div class="link">
+                            <a href="{{ path('get_poll', {"id": other_poll.id}) }}" class="button warning">
+                                {{ 'polls.goto' | trans }}
+                            </a>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
-    {% else %}
-        <p>{{ 'polls.user_already_voted' | trans }}</p>
-    {% endif %}
+        <div id="poll">
+            <div id="poll-description">
+                {{ poll.getContent() }}
+            </div>
+            {% if has_voted == false %}
+                <div id="poll-options">
+                    {% for option in options %}
+                        <a href="{{ path('vote_poll', {'id': poll.id, 'option_id': option.id }) }}" class="button warning">
+                            {{ option.value | trans }}
+                        </a>
+                    {% endfor %}
+                </div>
+            {% else %}
+                <div id="notice">{{ 'polls.user_already_voted' | trans }}</p>
+            {% endif %}
+        </div>
+    </div>
 {% endblock %}
 
