--- a/app/Resources/views/project/feedback.html.twig
+++ b/app/Resources/views/project/feedback.html.twig
@@ -81,6 +81,13 @@
                             </a>
                         {% endif %}
                     </div>
+                {% elseif poll is defined and poll != null %}
+                    <div class="info-card">
+                        <em>{{ 'project.feedback.poll' | trans }}</em>
+                        <a href="{{ path('get_poll', {'id': poll.id}) }}" class="button success">
+                            {{ 'project.feedback.goto_poll' | trans }}
+                        </a>
+                    </div>
                 {% endif %}
                 <div class="info-card">
                     <em>{{ 'project.feedback.created_at' | trans }}</em>
