--- a/web/css/project.css
+++ b/web/css/project.css
@@ -77,6 +77,19 @@
     font-size:0.9em;
 }
 
+.feedback_info {
+    display:flex ;
+    justify-content: space-between;
+    align-items: center ;
+}
+
+.feedback_info > div > img {
+    width: 15px;
+    height: 15px;
+    margin-left: 3px;
+    margin-bottom: -2px;
+}
+
 #feedback {
     margin-top: 40px;
     margin-right: 10px ;
@@ -237,6 +250,7 @@
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px; 
+   margin-right: 5% ;
 } 
 
 .speech-bubble:after { 
@@ -257,7 +271,8 @@
     background: #39395f;  
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
-    border-radius: 10px;  
+    border-radius: 10px; 
+    margin-left: 5% ;
 }
 
 .speech-bubble-author:after { 
