--- a/app/Resources/views/vote/details.html.twig
+++ b/app/Resources/views/vote/details.html.twig
@@ -36,16 +36,28 @@
                 {{ poll.getContent() | raw }}
             </div>
             <div id="poll-options">
-                {% if is_granted('ROLE_USER') == false %}
-                    {{ 'polls.not_user' | trans }}
-                {% elseif has_voted == false %}
-                    {% for option in options %}
-                        <a href="{{ path('vote_poll', {'id': poll.id, 'option_id': option.id }) }}" class="button warning">
-                            {{ option.value | trans }}
-                        </a>
-                    {% endfor %}
+                {% if poll.isOver %}
+                    <a href="{{ path('get_poll', {'id': poll.id}) }}"
+                       class="button success"
+                       style="background-color: #{{ (poll.winningOption.value == 'project.votes.yes') ? '48C' : 'F00' }}">
+                        {{ 'polls.results' | trans({
+                            "%score%": (poll.score / poll.nbVotes) * 100,
+                            "%value%": poll.winningOption.value | trans,
+                            "%nbVotes%": poll.nbVotes
+                        }) }}
+                    </a>
                 {% else %}
-                    {{ 'polls.user_already_voted' | trans }}
+                    {% if is_granted('ROLE_USER') == false %}
+                        {{ 'polls.not_user' | trans }}
+                    {% elseif has_voted == false %}
+                        {% for option in options %}
+                            <a href="{{ path('vote_poll', {'id': poll.id, 'option_id': option.id }) }}" class="button warning">
+                                {{ option.value | trans }}
+                            </a>
+                        {% endfor %}
+                    {% else %}
+                        {{ 'polls.user_already_voted' | trans }}
+                    {% endif %}
                 {% endif %}
         </div>
     </div>
