--- a/app/Resources/views/admin/game/faction/new.html.twig
+++ b/app/Resources/views/admin/game/faction/new.html.twig
@@ -12,12 +12,16 @@
     <div id="server-form" class="form">
         <form method="post" action="{{ path('game_create_faction') }}">
             <div class="form-group">
-                <label for="title">{{ 'game.faction.name' | trans }}</label>
+                <label for="name">{{ 'game.faction.name' | trans }}</label>
                 <input type="text" name="name" placeholder="{{ 'game.faction.name' | trans }}" />
             </div>
             <div class="form-group">
                 <label for="description">{{ 'game.faction.description' | trans }}</label>
                 <textarea name="description"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="color">{{ 'game.faction.color' | trans }}</label>
+                <input type="color" name="color" />
             </div>
             <button class="button success" type="submit">{{ 'game.faction.validate' | trans }}</button>
         </form>
