--- a/app/Resources/views/base.regular.html.twig
+++ b/app/Resources/views/base.regular.html.twig
@@ -48,7 +48,7 @@
                         </div>
                         <div id="icon-container">
                             <a href="https://www.kalaxia.org/" class="icon"><img src="{{ asset('images/icons/blog.png') }}" width="32" height="32" alt="Blog" /></a>
-                            <a href="https://www.facebook.com/kalaxiagame/" class="icon"> <img src="http://www.freeiconspng.com/uploads/facebook-logo-png-white-facebook-logo-png-white-facebook-icon-png--32.png" width="32" height="32" alt="Facebook" /> </a>
+                            <a href="https://www.facebook.com/kalaxiagame/" class="icon"> <img src="https://www.freeiconspng.com/uploads/facebook-logo-png-white-facebook-logo-png-white-facebook-icon-png--32.png" width="32" height="32" alt="Facebook" /> </a>
                             <a href="https://instagram.com/kalaxiagame/" class="icon"> <img src="https://straypet.net/wp-content/uploads/2014/11/instagram-icon-good.png" id="instagram-icon" /> </a>
                             <a href="https://twitter.com/kalaxiagame " class="icon"> <img src="https://daks2k3a4ib2z.cloudfront.net/56c2fa79e7d136a016bbbb88/56c30bffe7d136a016bbdab3_twitter-icon.png" width="32" height="32" /> </a>
                             <a href="https://www.linkedin.com/company/11369270/ " class="icon"> <img src="https://v.fastcdn.co/u/1570556-0-LinkedInwhite.png" width="32" height="32" /> </a>
